--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "illuminate/database": "4.1.30",
         "slim/views": "^0.1.3",
         "twig/twig": "~1.0",
-        "ircmaxell/password-compat": "^1.0"
+        "ircmaxell/password-compat": "^1.0",
+        "phpmailer/phpmailer": "~5.2"
     }
 }
