--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,12 @@
         "twig/twig": "~1.0",
         "ircmaxell/password-compat": "^1.0",
         "phpmailer/phpmailer": "~5.2"
+    },
+
+    "autoload": {
+      "classmap": [
+          "src/models"
+      ]
     }
+
 }
