--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
         "slim/views": "^0.1.3",
         "twig/twig": "~1.0",
         "ircmaxell/password-compat": "^1.0",
-        "phpmailer/phpmailer": "~5.2"
+        "phpmailer/phpmailer": "~5.2",
+        "symfony/translation": "2.7.3",
+        "symfony/twig-bridge": "2.7.3"
+
     },
 
     "autoload": {
