--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "slim/slim": "~2.0",
         "cartalyst/sentry": "^2.1",
         "illuminate/database": "4.1.30",
+        "mpdf/mpdf": "6.0.0",
         "slim/views": "^0.1.3",
         "twig/twig": "~1.0",
         "ircmaxell/password-compat": "^1.0",
