Modify user operations. Use of permissions.

--- a/src/config.php.template
+++ b/src/config.php.template
@@ -29,3 +29,6 @@ $config_phpmailer = array(
 
 $app->app_name = 'Slim2 Skeleton';
 $app->lang = 'es_ES';
+
+//Add fields to user to extend it
+$app->extend_user = array();
